# raspi-roboarm

./: .gitignore  README.md  get_Started.md  pyproject.toml  robot.calibration.yaml.example  robot.yaml
docs/stages/: 01-laptop-mock.md  02-pi-setup.md  03-first-servo.md  04-add-joints.md  05-debugging.md  06-coordinated-moves.md  07-inverse-kinematics.md
roboarm/: __init__.py  api.py  backends.py  cli.py  config.py  controller.py  diagnostics.py  kinematics.py  logging_setup.py  servo.py  state.py
scripts/: bootstrap-pi-gpio.sh  play.py  servo_control.py
sim/: README.md  arm3d.html
sim/css/: arm3d.css
sim/js/: angles.js  api.js  arm-update.js  bootstrap.js  cal-lab.js  config.js  constants.js  kinematics.js  reach.js  scene.js  state.js  three-utils.js  ui.js
tests/: test_api.py  test_servo.py
