[tool.poetry]
name = "raspi-roboarm"
version = "0.1.0"
description = "Raspberry Pi robotics control. Step 1: smooth servo control (MG996R) over a PCA9685, designed to grow into a 6-DOF arm."
authors = ["Shiva"]
readme = "README.md"
packages = [{ include = "roboarm" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.1"

# Hardware-only dependencies. These import native I2C drivers that only exist
# on a Raspberry Pi (Linux). They are kept optional so the project installs and
# runs in MOCK mode on a laptop (macOS/Windows) for development & debugging.
adafruit-blinka = { version = "^8.0", optional = true }
adafruit-circuitpython-pca9685 = { version = "^3.4.0", optional = true }
adafruit-circuitpython-busdevice = { version = "^5.2.0", optional = true }

[tool.poetry.extras]
hardware = [
    "adafruit-blinka",
    "adafruit-circuitpython-pca9685",
    "adafruit-circuitpython-busdevice",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
roboarm = "roboarm.cli:cli"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
