[tool.poetry]
name = "raspi-roboarm"
version = "0.1.0"
description = "Raspberry Pi robotics control. Step 1: smooth servo control (MG996R) over a PCA9685, designed to grow into a 6-DOF arm."
authors = ["Shiva"]
readme = "README.md"
packages = [{ include = "roboarm" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.1"
pyyaml = "^6.0.2"

# Hardware stack: auto-installed on Linux (Raspberry Pi). Skipped on macOS/Windows
# so the project still runs in MOCK mode on a laptop without `-E hardware`.
adafruit-blinka = { version = "^8.0", markers = "sys_platform == 'linux'" }
adafruit-circuitpython-pca9685 = { version = "^3.4.0", markers = "sys_platform == 'linux'" }
adafruit-circuitpython-busdevice = { version = "^5.2.0", markers = "sys_platform == 'linux'" }
# Python 3.13+ on Pi: PyPI has no lgpio wheel, only a source build (needs swig).
# Adafruit pre-built aarch64 wheel — see scripts/bootstrap-pi-gpio.sh for py3.14.
lgpio = { url = "https://github.com/adafruit/lgpio-python-wheels/raw/main/wheels/lgpio-0.2.2.0-cp313-cp313-linux_aarch64.whl", markers = "sys_platform == 'linux' and platform_machine == 'aarch64' and python_version >= '3.13'" }
# Modern Pi OS (Bookworm+) — provides the RPi.GPIO namespace Blinka expects.
rpi-lgpio = { version = "^0.6", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
roboarm = "roboarm.cli:cli"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
